# PCSCWorkshop

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .geminiignore  .gitignore  .project-index.md  CARDMEMORYLAYOUT_GUIDE.md  CARD_REDESIGN_PLAN.md  CARD_SYSTEM.md  CMakeLists.txt  CMakePresets.json  CardConnection.h  DEFERRED_TASKS.md  DESFire.h  Directory.Build.props  Dockerfile  LOG_ORGANIZATION_COMPLETE.txt  MIFARE_SIMULATOR_EXAMPLES.md  PCSC_workshop.sln  PCSC_workshop1.cpp  PCSC_workshop1.vcxproj  PCSC_workshop1.vcxproj.filters  README.md  README_FINAL.md  README_OLD.md  REAL_CARD_INTEGRATION.md  REAL_CARD_TEST_STATUS.md  REFACTORING_PLAN.md  Reader.h  SECTORCONFIG_BUILDER_EXAMPLES.md  SETUP_COMPLETE.txt
Card/: ARCHITECTURE.md  CMakeLists.txt  Card.vcxproj  Card.vcxproj.filters  DESFIRE_PLAN.md  DESFIRE_USAGE.md  FUTURE_WORK.md  OPTIMIZATION_FAILED.md  OPTIMIZATION_PLAN.md  QUICK_OPTIMIZE.md  README_SESSION.md
Card/Card/: Card.cpp  Card.h  CardDataTypes.h  CardIO.cpp  CardIO.h  CardInterface.cpp  CardInterface.h
Card/Card/CardModel/: AccessBits.cpp  AccessBits.h  BlockDefinition.h  CardDataTypes.h  CardMemoryLayout.h  CardTopology.cpp  CardTopology.h  DesfireMemoryLayout.h  PageDefinition.h  SectorDefinition.h  TrailerConfig.h
Card/Card/CardProtocol/: AccessControl.cpp  AccessControl.h  AuthenticationState.cpp  AuthenticationState.h  DesfireAuth.cpp  DesfireAuth.h  DesfireCommands.cpp  DesfireCommands.h  DesfireCrypto.cpp  DesfireCrypto.h  DesfireSecureMessaging.cpp  DesfireSecureMessaging.h  DesfireSession.h  KeyManagement.cpp  KeyManagement.h
Card/Card/Desfire/: Desfire.cpp
Card/Card/MifareClassic/: MifareCardSimulator.cpp  MifareCardSimulator.h  MifareClassic.cpp  MifareClassic.h  SimulatedReader.cpp  SimulatedReader.h
Card/Card/Topology/: SectorConfig.cpp  SectorConfig.h  SectorConfigBuilder.cpp  SectorConfigBuilder.h  Topology.h
Cipher/: CIPHER_OPTIMIZATION_GUIDE.md  CMakeLists.txt  CRYPTO_MIGRATION_PLAN.md  Cipher.cpp  Cipher.vcxproj  Cipher.vcxproj.filters  Ciphers.h  pch.cpp  pch.h
Cipher/Cipher/: AesCbcCipher.cpp  AesCbcCipher.h  AesCtrCipher.cpp  AesCtrCipher.h  AesGcmCipher.cpp  AesGcmCipher.h  AesGcmUtil.h  AffineCipher.cpp  AffineCipher.h  BlockCipher.cpp  BlockCipher.h  CaesarCipher.cpp  CaesarCipher.h  Cipher.h  CipherAadFallback.cpp  CipherTypes.h  CipherUtil.cpp  CipherUtil.h  Ciphers.h  Cng3DES.cpp  Cng3DES.h  CngAES.cpp  CngAESGcm.cpp  CngAESGcm.h  CngBlockCipher.cpp  CngBlockCipher.h  Crypto.h  CryptoTypes.h  Hash.cpp  Hash.h  Hmac.cpp  Hmac.h  ICipherAAD.h  Kdf.cpp  Kdf.h  Random.cpp  Random.h  TripleDesCbcCipher.cpp  TripleDesCbcCipher.h  XorCipher.cpp
Cipher/tests/: TestCiphers.cpp  cipher_test.cpp
McpServer/: CMakeLists.txt  main.cpp
McpServer/McpServer/: HexUtils.h  JsonRpc.h  McpServer.h  PcscSession.h  ToolRegistry.h
McpServer/McpServer/Tools/: ConnectTool.h  DisconnectTool.h  ListReadersTool.h  SendApduTool.h  TransactionTool.h
PCSC_workshop1/: CMakeLists.txt  CardConnection.h  Cipher.cpp  Cipher.h  DESFire.h  PCSC_workshop1.cpp  PCSC_workshop1.vcxproj  PCSC_workshop1.vcxproj.filters  PcscUtils.h  Reader.cpp  Reader.h  build_and_run_tests.bat  main.cpp
PCSC_workshop1/Cipher/: AffineCipher.cpp  AffineCipher.h  CaesarCipher.cpp  CaesarCipher.h  Cipher.h  CipherAadFallback.cpp  CipherUtil.h  Ciphers.h  Cng3DES.cpp  CngAES.cpp  CngAES.h  CngAESGcm.cpp  CngAESGcmUtil.h  XorCipher.cpp  XorCipher.h
PCSC_workshop1/Reader/: ACR1281UReader.cpp  ACR1281UReader.h  Reader.cpp  Reader.h  Readers.h
PCSC_workshop1/Reader/ACR1281U/: ACR1281U.h  ACR1281UReader.cpp  ACR1281UReader.h  ACR1281UReaderTestHelpers.cpp  ACR1281UReaderTests.cpp
PCSC_workshop1/tests/: TestCiphers.cpp  cipher_test.cpp
PCSC_workshop1/utils/: DESFire.h  PcscUtils.h  README.txt
Reader/: CMakeLists.txt  MifareClassic.cpp  MifareClassic.h  Reader.cpp  Reader.vcxproj  Reader.vcxproj.filters
Reader/Card/: Card.cpp  Card.h  CardDataTypes.h
Reader/Card/Desfire/: Desfire.h
Reader/Card/MifareClassic/: MifareClassic.cpp  MifareClassic.h
Reader/Reader/: CMakeLists.txt  PcscCommands.cpp  PcscCommands.h  Reader.cpp  Reader.h  Readers.h
ScardTool/: BUILD.md  CMakeLists.txt  Doxyfile  EnvVars.h  ExitCode.h  PLAN.md  README.md  SCRIPT.md  cipher_helper.h  help_buildinfo.cpp  help_buildinfo.h  main.cpp
ScardTool/App/: App.h
ScardTool/ArgParser/: ArgParser.h
ScardTool/Card/: AccessBitsHelper.h  CardMath.h  TrailerFormat.h
ScardTool/Catalog/: ApduCatalog.h  ApduMacro.h  InsCatalog.h  MacroRegistry.h  StatusWordCatalog.h
ScardTool/Commands/: CommandRegistry.h  Commands.h  ICommand.h
ScardTool/Crypto/: CardCrypto.h  PayloadCipher.h
ScardTool/LibApi/: ScardToolLib.cpp  ScardToolLib.h  lua_scardtool.cpp  tcl_scardtool.cpp
ScardTool/LineEditor/: ILineEditor.h
ScardTool/Mcp/: HexUtils.h  JsonRpc.h  McpServer.h  ToolRegistry.h
ScardTool/Modes/: InteractiveMode.h  McpMode.h
ScardTool/Output/: Formatter.h
ScardTool/Script/: ScriptEngine.h  ScriptRunner.h
ScardTool/Session/: SessionFile.h
ScardTool/Tests/: CMakeLists.txt  test_access_bits.cpp  test_arg_parser.cpp  test_card_math.cpp  test_catalog.cpp  test_commands_dryrun.cpp  test_crypto.cpp  test_hex_utils.cpp  test_script_engine.cpp  test_script_runner.cpp  test_session_file.cpp  test_trailer_format.cpp
Tests/: ACR1281UReaderTestHelpers.cpp  ACR1281UReaderTests.cpp  ACR1281UReaderTests.h  CMakeLists.txt  CardSystemTests.cpp  RealCardReaderTest.cpp  TestCiphers.cpp  Tests.vcxproj  Tests.vcxproj.filters  cipher_test.cpp  main.cpp
Utils/: ArrayAppend.cpp  ArrayAppend.h  ArrayUtils.h  CMakeLists.txt  Utils.vcxproj  Utils.vcxproj.filters
Utils/Utils/: ACR1281UReaderTests.cpp  BasicError.h  CardConnection.cpp  CardConnection.h  CardUtils.h  DESFire.h  DataFormatUtils.h  ErrorBuilder.h  ErrorTraits.h  Exceptions.h  MetaTypes.h  PCSC.cpp  PCSC.h  PcscError.h  PcscErrorCode.h  PcscUtils.h  Platform.h  Result.h  StatusWordHandler.h  Types.h  Utils.cpp  Utils.h
Workshop1/: CMakeLists.txt  SmartCardApp.cpp  SmartCardApp.h  Workshop1.vcxproj  Workshop1.vcxproj.filters  main.cpp
(+46 files in other folders)
